agregando consulta url s3 por sub dominio
