# back/central-reserve/internal/infra/primary/http2/handlers/userhandler/request/create-user-request.go
@@ -1,12 +1,15 @@
 package request
 
+import "mime/multipart"
+
 // CreateUserRequest representa la solicitud para crear un usuario
 type CreateUserRequest struct {
-	Name        string `json:"name" binding:"required,min=2,max=100"`
-	Email       string `json:"email" binding:"required,email"`
-	Phone       string `json:"phone" binding:"omitempty,len=10"`
-	AvatarURL   string `json:"avatar_url" binding:"omitempty,url"`
-	IsActive    bool   `json:"is_active"`
-	RoleIDs     []uint `json:"role_ids" binding:"omitempty,dive,min=1"` // Opcional
-	BusinessIDs []uint `json:"business_ids" binding:"omitempty,dive,min=1"`
+	Name        string                `form:"name" binding:"required,min=2,max=100"`
+	Email       string                `form:"email" binding:"required,email"`
+	Phone       string                `form:"phone" binding:"omitempty,len=10"`
+	AvatarURL   string                `form:"avatar_url" binding:"omitempty,url"`
+	AvatarFile  *multipart.FileHeader `form:"avatarFile"`
+	IsActive    bool                  `form:"is_active"`
+	RoleIDs     []uint                `form:"role_ids" binding:"omitempty,dive,min=1"`
+	BusinessIDs []uint                `form:"business_ids" binding:"omitempty,dive,min=1"`
 }
